allow margins to collapse between textboxes fixes #6

--- a/src/components/AddButton.css
+++ b/src/components/AddButton.css
@@ -1,6 +1,7 @@
 .AddContainer {
   display: block;
-  position: relative;
+  position: absolute;
+  width: 100%;
   height: 0;
   z-index: 1;
 }
