--- a/src/components/App.css
+++ b/src/components/App.css
@@ -16,6 +16,7 @@
 }
 
 .LayoutWrapper {
+  position: relative;
   margin: auto;
   max-width: 100%;
   padding: 2rem 0;
